finally fixed my nav icons being wonky looking, decided to set nav1 and 2 to overflow:hidden, worked like a charm. Not necessarily sure why, but hey im happy

--- a/index.css
+++ b/index.css
@@ -59,40 +59,61 @@ a {
 .nav1 {
   text-align: center;
   background-color: #ff763e;
-  height: 2.5rem;
+  height: 4rem;
+  padding-top: 1.5rem;
   width: 5%;
   border-radius: 25%;
   /* border: 1px solid black; */
-  padding-top: 1.2rem;
+  /* padding-top: 1.2rem; */
   font-size: 1.1rem;
+  margin-top: 2rem;
+  margin-left: 20%;
+  margin-right: 20%;
+  overflow: hidden;
 }
 
 .nav2 {
   text-align: center;
   background-color: #5ED3EB;
-  height: 2.5rem;
+  height: 4rem;
+  padding-top: 1.5rem;
   width: 7%;
   border-radius: 25%;
-  padding-top: 1.2rem;
+  /* padding-top: 1.2rem; */
   font-size: 1.1rem;
   overflow: hidden;
+  margin-top: 2rem;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 .nav3 {
   text-align: center;
   background-color: #FFCD69;
-  height: 2.5rem;
+  height: 4rem;
+  padding-top: 1.5rem;
   width: 5%;
   border-radius: 25%;
-  padding-top: 1.2rem;
+  /* padding-top: 1.2rem; */
   font-size: 1.1rem;
+  margin-top: 2rem;
+  margin-left: 20%;
+  margin-right: 20%;
+  overflow: hidden;
 }
 .navbar {
-  width: 100vw;
-  display: inline;
-  margin-left: 20%;
+  width: 80%;
+  /* display: inline; */
+  margin-left: 10%;
+  /* margin-top: 3rem; */
+  margin-right: 10%;
+  height: 11rem;
+  border: 1px solid black;
+  
 }
 .navbar .InlineFNav {
-  margin-inline: 7%;
+  margin-inline: 5%;
+  margin-left: 15%;
+  margin-right: 10%;
 }
 .InlineFNav {
   display: inline-block; 
@@ -169,7 +190,38 @@ header div img {
   color: white;
   font-size: 1.5rem;
 }
-
+.thirdbody {
+  width: vw;
+  height: 40rem;
+}
+.fireimg{
+  width: 12.5rem;
+  height: 12.5rem;
+  margin-left: 50%;
+  margin-right: 50%;
+}
+.camperimg {
+  width: 12.5rem;
+  height: 12.5rem;
+  margin-left: 50%;
+  margin-right: 50%;
+}
+.bolder {
+  font-weight: bold;
+}
+.tbp {
+  margin-left: 50%;
+  margin-right: 50%;
+  width: 15rem;
+  padding-top: 2rem;
+}
+.footerimg {
+  width: 99%;
+  height: 30rem;
+  margin-top: 6rem;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+}
 /* IMPORTANT -------- DO NOT USE PX, just rem's or em. Ill determine what i want the root file to be, but until then, no pixels. */
 
 /* main text body = #DDB9A3, goes in html? */
